feat: grade mutu 1-5 & atribusi 3-input dengan penjelasan kalimat (bagian 6)
